compiler/testData/diagnostics/tests/deprecated/imports.kt
import <!DEPRECATED_SYMBOL_WITH_MESSAGE!>C<!> as C2

Deprecated("obsolete")
class C {
    fun use() {}
}

fun useAlias(c : <!DEPRECATED_SYMBOL_WITH_MESSAGE!>C2<!>) { c.use() }